# cahatpgpt

./: README.md  pyproject.toml  requirements.txt
assistant/: __init__.py  cli.py  logging_config.py  typing.py  utils.py
assistant/config/: __init__.py  loader.py  schemas.py  yaml_loader.py
assistant/llm/: __init__.py  clients.py  prompts.py
assistant/memory/: __init__.py  cognee.py  embedding.py  store.py  temporal.py
assistant/services/: __init__.py  conversation.py  profiling.py  summaries.py
assistant/tools/: __init__.py  commands.py  notes.py
config/: allowlist.yaml  settings.yaml
docs/: CHECKLIST.md  PLAN.md
tests/: test_config.py  test_conversation.py  test_memory.py  test_memory_temporal.py  test_summaries.py
